Fixed image rendering

--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -1777,7 +1777,7 @@
    "source": [
     "## Conclusion\n",
     "Our algorithm makes appropriate suggestions. Comparing the similar apps suggested by google playstore with the recommendations we make for Facebook.\n",
-    "![image.png](https://github.com/mbaart/DataExploration/playstore_recommendations.png)\n",
+    "![image.png](./playstore_recommendations.png)\n",
     "Both google playstore and our algorithm recommend some of the same apps, such as Facebook Lite, Instagram, Snapchat, tumblr, pintrest, and LinkedIn. Without having tried the other apps in the list, they seem appropriate for a social app like Facebook; The rest of our list contains many instant messenger, video chat and free texting type apps. Considering that google has vast stores of data and is capable of far more complex mining algorithms, our algorithm produces a good quality result."
    ]
   },
